--- a/06-library/20-ndc-site/site.css
+++ b/06-library/20-ndc-site/site.css
@@ -18,8 +18,6 @@
    --background-color-03: #e9e6cc;
    --background-color-04: #c6cad4;
    --background-color-05: #f7d198;
-   margin-left: calc(100vw - 100%);
-   overflow-y: scroll;
 }
 
 * {
@@ -37,12 +35,18 @@ body {
 main {
    max-width: 1000px;
    margin: 0 auto;
-   padding: 30px;
+   padding: 20px;
+
 }
 
 p {
    font-size: 1.3rem;
    margin-bottom: 10px;
+}
+
+.code {
+   font-weight: bold;
+   font-size: 1.7rem;
 }
 
 button {
