fix scroll jank

--- a/06-library/20-ndc-site/site.css
+++ b/06-library/20-ndc-site/site.css
@@ -27,6 +27,10 @@
    font-family: 'Quicksand', sans-serif;
 }
 
+html {
+   margin-left: calc(100vw - 100%);
+}
+
 body {
    color: black;
    font-size: 18px;
