initialise css for 03

--- a/04-css/03-css-style.css
+++ b/04-css/03-css-style.css
@@ -9,7 +9,7 @@ h3 {
 	color: pink; /* EXERCISE will be pink as it is an h3 but h3 in component won't be pink */
 }
 my-card {
-	color: brown; /* this will make text brown until overwritten by other styles */
+	color: goldenrod; /* this will make text brown until overwritten by other styles */
 } 
 
 /* ------------------- */
