--- a/04-css/03-css-style.css
+++ b/04-css/03-css-style.css
@@ -6,16 +6,16 @@ h2 {
 	color: red;
 }
 h3 {
+	font-weight: bold;
 	color: pink; /* EXERCISE will be pink as it is an h3 but h3 in component won't be pink */
 }
 my-card {
 	color: goldenrod; /* this will make text brown until overwritten by other styles */
-} 
+}
 
 /* ------------------- */
 /* this will work as element is in light dom */
 #nested {
-	
 	/* color: purple; */
 }
 
@@ -26,9 +26,8 @@ my-card {
 	font-weight: bold;
 } */
 
-
 /* ------------------- */
 /* these will not work as the Shadow DOM is encapsulated */
 .card {
-	background: aqua; 
+	background: aqua;
 }
